[package]
name = "sat_encoder"
version = "0.1.0"
authors = ["neuring"]
edition = "2018"

[dependencies]
cadical = "0.1.13"

[dev-dependencies]
num-integer = "0.1.44"
#Used in examples.
itertools = "0.10.0"
structopt = "0.3.21"
anyhow = "1.0.40"

[[example]]
name = "sudoku"
path = "examples/sudoku.rs"
