[package]
name = "satoxid"
version = "0.1.0"
authors = ["neuring"]
edition = "2018"

[dependencies]
cadical = { version = "0.1.13", optional = true }
serde = { version = "1.0.126", features = ["derive"], optional = true }

[dev-dependencies]
num-integer = "0.1.44"
serde_json = "1.0.64"

#Used in examples.
itertools = "0.10.0"
structopt = "0.3.21"
anyhow = "1.0.40"
derive_more = "0.99.14"
strum = { version = "0.20.0", features = ["derive"] }

[features]
default = ["cadical"]
